S2/Java/tpVscode/TemplateTP/.metals/metals.log
2023.03.29 09:56:18 INFO  Started: Metals version 0.11.11 in workspace '/home/cytech/Travail/S2/Java/tpVscode/TP9' for client Visual Studio Code 1.76.2.[0m
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/home/cytech/.cache/coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.03.29 09:56:19 INFO  time: initialize in 0.59s[0m
2023.03.29 09:56:21 WARN  Build server is not auto-connectable.[0m
Mar 29, 2023 9:56:21 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 1
Mar 29, 2023 9:56:21 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 3
2023.03.29 09:56:21 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
Mar 29, 2023 9:56:21 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 6
Mar 29, 2023 9:56:21 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 4
Mar 29, 2023 9:56:21 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 11
Mar 29, 2023 9:56:21 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 9
Mar 29, 2023 9:56:21 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 14
2023.03.29 09:56:22 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
2023.03.29 09:56:22 WARN  Running javac-semanticdb failed for file:///home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java. Output:
/home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java:1: error: reached end of file while parsing
package com
           ^
1 error[0m
2023.03.29 09:56:23 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
2023.03.29 09:56:23 WARN  Running javac-semanticdb failed for file:///home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java. Output:
/home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java:1: error: reached end of file while parsing
package com.
            ^
1 error[0m
2023.03.29 09:56:24 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
2023.03.29 09:56:24 WARN  Running javac-semanticdb failed for file:///home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java. Output:
/home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java:1: error: reached end of file while parsing
package com.example.tp
                      ^
1 error[0m
2023.03.29 09:56:26 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
2023.03.29 09:56:27 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
2023.03.29 09:56:35 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
2023.03.29 09:56:35 WARN  Running javac-semanticdb failed for file:///home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java. Output:
/home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java:3: error: reached end of file while parsing
public class 
            ^
1 error[0m
2023.03.29 09:56:36 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
2023.03.29 09:56:37 WARN  Running javac-semanticdb failed for file:///home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java. Output:
/home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java:3: error: reached end of file while parsing
public class App
                ^
1 error[0m
Mar 29, 2023 9:56:39 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 121
2023.03.29 09:56:40 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
2023.03.29 09:56:43 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
2023.03.29 09:56:45 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
2023.03.29 09:56:47 WARN  no build target for: /home/cytech/Travail/S2/Java/tpVscode/TP9/src/main/java/com/example/tp/App.java[0m
